fix blurred images

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,3 +117,7 @@ details.material-cost {
 		transform: rotate(90deg);
 	}
 }
+
+img {
+	image-rendering: pixelated;
+}
